# dppi-backend

./: .editorconfig  .env  .gitignore  Cargo.toml  README.md
src/: auth.rs  db.rs  main.rs  utils.rs
src/controllers/: auth_controller.rs  cv_card_controller.rs  dashboard_controller.rs  gallery_controller.rs  home_controller.rs  image_optimizer.rs  kegiatan_controller.rs  kesbangpol_controller.rs  majelis_pertimbangan_controller.rs  mod.rs  pdp_controller.rs  pelaksana_controller.rs  pendaftaran_dppi_controller.rs  pendaftaran_dppi_controller_provinsi.rs  pengumuman_controller.rs  post_controller.rs  preview.rs  rating_controller.rs  regulasi_controller.rs  surat_rekomendasi_controller.rs  user_controller.rs  userpanel.rs  video_controller.rs  visitor_advanced_controller.rs  visitor_controller.rs
src/models/: majelis_pertimbangan.rs  mod.rs  pendaftaran_dppi.rs  pendaftaran_dppi_provinsi.rs  pengumuman.rs  rating.rs  user.rs  visitor.rs
