[package]
name = "dppi-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.7"
actix-multipart = "0.7.2"
actix-web = {version = "4.9.0", features = ["cookies"]}
ammonia = "4.1.2"
base64 = "0.22.1"
bcrypt = "0.18.0"
bytes = "1"
blake3 = "1.0"
chrono = { version = "0.4.40", features = ["serde"] }
deunicode = "1.6.2"
dotenv = "0.15.0"
env_logger = "0.11.8"
rust_xlsxwriter="0.93.0"
futures = "0.3.31"
futures-util = "0.3"
hex = "0.4"
html-escape = "0.2.13"
image = { version = "0.25", features = ["webp", "jpeg", "png"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
log = "0.4.28"
mail-send = { version = "0.5", default-features = true }
mime = "0.3"
mime_guess ="2.0.5"
percent-encoding = "2.3"
rand = "0.9.2"
rand_distr = "0.5.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = "1.39"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.148"
slug = "0.1"
sodiumoxide = "0.2.7"
sqlx    = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "json", "runtime-tokio-rustls", "rust_decimal"] }
sanitize-filename = "0.6.0"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
webp = "0.3"
urlencoding = "2.1.3"
url = "2.5"
